--- a/NomaiSky/manifest.json
+++ b/NomaiSky/manifest.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/ow-mods/owml/master/schemas/manifest_schema.json",
   "filename": "NomaiSky.dll",
-  "author": "Vambok",
-  "name": "NomaiSky",
+  "author": "Vambok, Trifid, Lezzlebit",
+  "name": "Nomai's Sky",
   "uniqueName": "Vambok.NomaiSky",
   "version": "0.3.0",
   "owmlVersion": "2.15.1",
