Visited system map indicator + free map pitch
Added indicator for visited systems (with config options)
Allowed free map cam movements

--- a/NomaiSky/default-config.json
+++ b/NomaiSky/default-config.json
@@ -11,6 +11,16 @@
                 "Random system",
                 "Distant system"
             ]
+        },
+        "Visited systems display type": {
+            "type": "selector",
+            "value": "Lines",
+            "options": [
+                "Lines",
+                "All lines",
+                "Rings",
+                "None"
+            ]
         }
     }
 }
