--- a/NomaiSky/default-config.json
+++ b/NomaiSky/default-config.json
@@ -21,6 +21,10 @@
                 "Rings",
                 "None"
             ]
+        },
+        "Loading screen tips": {
+            "type": "toggle",
+            "value": "true"
         }
     }
 }
