Difficulty setting and $@£°*
Added difficulty (fuel capacity)
Loading texts are now 0@$^£% and stay on the spinning logo screen
Heightmaps improved imperceptibly
Fixed fuel sometimes not filling when going back to TH

--- a/NomaiSky/default-config.json
+++ b/NomaiSky/default-config.json
@@ -12,6 +12,16 @@
                 "Distant system"
             ]
         },
+        "Difficulty (ship fuel capacity)": {
+            "type": "selector",
+            "value": "Medium",
+            "options": [
+                "Sandbox",
+                "Easy",
+                "Medium",
+                "Hard"
+            ]
+        },
         "Visited systems display type": {
             "type": "selector",
             "value": "Lines",
